# r_d_AIAgents

./: .gitignore
1_llm_api/1_openai/1_basics/: .env.example
1_llm_api/1_openai/1_basics/1_basics.egg-info/: SOURCES.txt  requires.txt
1_llm_api/1_openai/1_homework/: main-tool-use.py
2_DB/1_simple/1_MSSQL/: README.md
2_DB/1_simple/2_NoSQL/0_MongoDb/: README.md
2_DB/1_simple/3_Fulltext/0_Elasticsearch/: README.md
2_DB/1_simple/4_Vector/1_chroma/: README.md
2_DB/1_simple/4_Vector/2_qdrant/: README.md
2_DB/1_simple/5_File/1_MinIO/: README.md
2_DB/2_ecommerce/: README.md
2_DB/2_ecommerce/1_MSSQL/scripts/: populate_data.py
2_DB/2_ecommerce/5_MinIO/: README.md
2_DB/2_ecommerce/shared_data/: metadata.json  orders.json  products.json  reviews.json  users.json
2_DB/3_db_as_tool/: main.py
2_MCP/10_MY_Code_interpreter/: COMPARISON.md
2_MCP/10_MY_Code_interpreter/1_docker/: README.md  docker-compose.yml
2_MCP/10_MY_Code_interpreter/2_local/: QUICKSTART.md  README.md
2_MCP/10_MY_Code_interpreter/2_local/http/: mcp_python_server.py  pyproject.toml
2_MCP/10_MY_Code_interpreter/2_local/http/test/: main.py  pyproject.toml
2_MCP/5_SAMPLES/0_Playwright/: README.md  pyproject.toml  simple_google_search_sse.py  simple_google_search_stdio.py
2_MCP/5_SAMPLES/1_ChromaDB/: README.md  pyproject.toml  simple_chromadb_client.py
2_MCP/5_SAMPLES/2_QdrantDB/: README.md  pyproject.toml  simple_qdrant_client.py  start_qdrant_mcp_server.py
2_MCP/5_SAMPLES/2_QdrantDB/qdrant_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
3_N8N/: README.md
3_N8N/00_N8N-API/: README.md  pyproject.toml  workflow_manager.py
3_N8N/01_Credentials/deepl/: NOTES.md
3_N8N/01_Credentials/elasticsearch/: NOTES.md
3_N8N/01_Credentials/gmail/: NOTES.md
3_N8N/01_Credentials/minio/: NOTES.md
3_N8N/01_Credentials/mongo/: NOTES.md
3_N8N/01_Credentials/mssql/: NOTES.md
3_N8N/01_Credentials/nasa/: NOTES.md
3_N8N/01_Credentials/ollama/: NOTES.md
3_N8N/01_Credentials/openai/: NOTES.md
3_N8N/01_Credentials/qdrant/: NOTES.md
3_N8N/01_Credentials/serapi/: NOTES.md
3_N8N/01_Credentials/slack/: NOTES.md
3_N8N/01_Credentials/wolframalpha/: NOTES.md
3_N8N/02_Basics/01-flow/: 1_1-if.json  1_2-switch.json  1_3-loop.json  1_4-merge.json  1_5-error.json  README.md
3_N8N/02_Basics/02-API/: 2_1-HTTP_REST.json  2_2-HTTP_HTML.json  2_3-Slack.json  2_4_Gmail.json  README.md
3_N8N/03_Agents/: CLAUDE_backup.md  GOAL.md
3_N8N/03_Agents/1-llm-basic/: 1.1 OpenAI Basic Chat.json  README.md
3_N8N/03_Agents/4-subworkflows/: 4.1.1 Main workflow.json  4.1.2 SerApi workflow.json  4.1.3 Wolfram workflow.json
3_N8N/03_Agents/5-custom-agents/: 5.1 Custom langchain.json  README.md
4_AgentKit/: README.md
4_LangFlow/: README.md
4_LangFlow/02_Basics/01-flow/: 1_If.json  2_Loop.json
4_LangFlow/02_Basics/02-API/: HTTP API.json  HTTP HTML.json
4_LangFlow/03-Agents/1-llm/: LLM.json
4_LangFlow/03-Agents/3-ai-agents/: AI Agent - MCP.json  AI Agent - Tools.json
5_custom_framework/0_litellm/: litellm_config.yaml
5_custom_framework/2_ai_framework/: pyproject.toml
6_langchain-ai/1_langchain/10_agent/: main.py  pyproject.toml
6_langchain-ai/1_langchain/11_agent_custom_tools/: main.py  pyproject.toml
6_langchain-ai/1_langchain/12_agent_mcp/: main.py  pyproject.toml
6_langchain-ai/1_langchain/1_model/huggingface/: main_api.py  main_local.py  main_local_q.py  pyproject.toml
6_langchain-ai/1_langchain/20_agents/1_agent_as_tool/: README.md  main.py  pyproject.toml
6_langchain-ai/1_langchain/2_model_custom_tools/: main.py  pyproject.toml
6_langchain-ai/1_langchain/30_human_in_loop/: .gitignore  README.md  human_input.py  main.py  pyproject.toml  tools.py
6_langchain-ai/1_langchain/3_model_mcp/: main.py
6_langchain-ai/1_langchain/4_model_structured_output/: main.py  pyproject.toml
6_langchain-ai/2_langgraph/10_deployment/: README.md  agent.py  main.py  pyproject.toml
6_langchain-ai/2_langgraph/1_simple/5_subgraph/: main.py  pyproject.toml  state.py
6_langchain-ai/2_langgraph/1_simple/5_subgraph/subgraph/: main_subgraph.py
6_langchain-ai/2_langgraph/5_agent/0_react_manual/: pyproject.toml
6_langchain-ai/2_langgraph/6_agents/2b_supervision/: agent_coder.py  agent_researcher.py  graph.py  main.py  pyproject.toml  supervisor.py
6_langchain-ai/2_langgraph/6_agents/3_swarm/: agent_coder.py  agent_researcher.py  agent_summarizer.py  graph.py  handoff.py  main.py  pyproject.toml  tools.py
(+136 files in other folders)
