[project]
name = "10-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain[openai]>=1.0.2",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
    "uvicorn>=0.34.3"
]
