[project]
name = "mcp-local-python-executor-http"
version = "1.0.0"
description = "MCP Local Python Code Interpreter (HTTP transport)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.1",
    "uvicorn>=0.32.1",
    "starlette>=0.41.3",
]

[tool.uv]
dev-dependencies = []
