[project]
name = "2-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "langchain>=1.0.2",
    "langchain-huggingface>=1.0.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.52.4",
]
