[project]
name = "agent-as-tool"
version = "0.1.0"
description = "Demonstration of tool calling pattern - one agent treating other agents as tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.0.2",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=1.0.2",
    "python-dotenv>=1.1.0",
]
