[project]
name = "1-one-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain[openai]>=1.0.2",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=1.0.2",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]
