[project]
name = "1-one-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.0.2",
    "langchain-openai>=0.3.18",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=1.0.2",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]
